--- a/css/demo.css
+++ b/css/demo.css
@@ -39,6 +39,33 @@ td{
     font-family: arial;
     font-size: 15px;
 }*/
+
+/*Own stuff*/
+body{
+font-family:"Helvetica Neue",Helvetica,Arial,sans-serif
+}
+a{
+font-size: 25px;
+color: black;
+text-decoration: none;
+}
+a:hover {
+color: #5d85f9;
+text-decoration: none;
+}
+img{
+height: 400px;
+width: 250px;
+border-radius: 10px;
+border-style: inset;
+border: 10px;
+float: left;
+}
+h3{
+font-style: italic;
+}
+/*END POPUP*/
+
 .paging_two_button .ui-button {
 	float: left;
 	cursor: pointer;
